@@ -3,6 +3,7 @@ package com.ms.wonderfulreading.model.book;
 import com.ms.wonderfulreading.model.Sentence;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public final class SentenceLesson {
 
@@ -12,7 +13,7 @@ public final class SentenceLesson {
      * Copy constructor.
      */
     public SentenceLesson(SentenceLesson sentenceLesson) {
-        this(sentenceLesson.sentences.stream().map(Sentence::new).toList());
+        this(sentenceLesson.sentences.stream().map(Sentence::new).collect(Collectors.toList()));
     }
 
     public SentenceLesson(List<Sentence> sentences) {
